--- a/index.html
+++ b/index.html
@@ -3,168 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>RStreaming - Official</title>
+    <title>RStreaming - Official Premium</title>
     <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
     <style>
         :root {
             --primary: #ff0050;
-            --bg-light: #f8f9fa;
-            --card-bg: #ffffff;
-            --text-main: #1a1a1b;
-            --text-sub: #65676b;
-            --shadow: 0 4px 12px rgba(0,0,0,0.08);
+            --bg-light: #ffffff;
+            --bg-gray: #f8f9fa;
+            --text-dark: #1a1a1b;
+            --shadow: 0 4px 15px rgba(0,0,0,0.08);
         }
 
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
-        
-        body { 
-            margin: 0; 
-            background: var(--bg-light); 
-            color: var(--text-main); 
-            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; 
-            height: 100vh; 
-            overflow: hidden; 
-        }
+        body { margin: 0; background: var(--bg-gray); color: var(--text-dark); font-family: -apple-system, sans-serif; height: 100vh; overflow: hidden; }
 
         /* Pages */
         .page { display: none; height: 100vh; width: 100vw; position: absolute; flex-direction: column; }
         .page.active { display: flex; }
 
-        /* Header Resmi */
-        .header {
-            padding: 15px 20px;
-            background: var(--card-bg);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            border-bottom: 1px solid #eee;
-            position: sticky;
-            top: 0;
-            z-index: 100;
-        }
-        .logo { font-size: 22px; font-weight: 800; color: var(--primary); letter-spacing: -1px; }
+        /* Header */
+        .header { padding: 15px 20px; background: white; border-bottom: 1px solid #eee; display: flex; justify-content: space-between; align-items: center; }
+        .logo { font-size: 24px; font-weight: 800; color: var(--primary); letter-spacing: -1px; }
 
-        /* Login Page */
-        #login-page { background: white; justify-content: center; align-items: center; text-align: center; }
-        .login-box { padding: 40px 20px; }
-        .btn-google {
-            background: #fff; color: #444; border: 1px solid #ddd;
-            padding: 12px 25px; border-radius: 8px; font-weight: 600;
-            display: flex; align-items: center; gap: 10px; cursor: pointer;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.05); transition: 0.2s;
-        }
-        .btn-google:active { transform: scale(0.98); background: #f5f5f5; }
-
-        /* Home Page */
+        /* Home Grid */
         #home-page { padding-bottom: 80px; overflow-y: auto; }
         .container { padding: 15px; }
-        .section-title { font-size: 18px; font-weight: 700; margin-bottom: 15px; padding-left: 5px; }
-
-        /* Grid Card Ala Website Resmi */
         .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; }
-        .card { 
-            background: var(--card-bg); 
-            border-radius: 16px; 
-            overflow: hidden; 
-            box-shadow: var(--shadow);
-            border: 1px solid #f0f0f0;
-            transition: 0.3s;
-        }
-        .card-thumb { position: relative; height: 180px; width: 100%; }
+        .card { background: white; border-radius: 16px; overflow: hidden; box-shadow: var(--shadow); border: 1px solid #eee; position: relative; }
+        .card-thumb { height: 200px; width: 100%; position: relative; }
         .card-thumb img { width: 100%; height: 100%; object-fit: cover; }
-        .card-body { padding: 10px; display: flex; align-items: center; gap: 8px; }
-        .user-avatar { width: 24px; height: 24px; border-radius: 50%; object-fit: cover; }
-        .user-name { font-size: 13px; font-weight: 600; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
-        .live-badge { 
-            position: absolute; top: 10px; left: 10px; 
-            background: var(--primary); color: white; 
-            font-size: 10px; font-weight: 800; padding: 3px 8px; 
-            border-radius: 4px; text-transform: uppercase;
-        }
+        .live-label { position: absolute; top: 10px; left: 10px; background: var(--primary); color: white; font-size: 10px; font-weight: 800; padding: 3px 8px; border-radius: 4px; }
+        .card-footer { padding: 10px; font-size: 13px; font-weight: 600; }
 
-        /* Player Page (Tetap Dark agar Video Jelas) */
-        #player-page { background: #000; }
-        video { width: 100%; height: 100%; object-fit: cover; }
-        .player-overlay { 
-            position: absolute; inset: 0; z-index: 10; 
-            background: linear-gradient(transparent 60%, rgba(0,0,0,0.6));
-            padding: 20px; display: flex; flex-direction: column; justify-content: flex-end;
-            pointer-events: none;
-        }
+        /* Player TikTok View */
+        #player-page { background: #000; z-index: 2000; }
+        video { width: 100%; height: 100%; object-fit: cover; background: #000; }
+        .player-ui { position: absolute; inset: 0; z-index: 10; pointer-events: none; display: flex; flex-direction: column; justify-content: flex-end; padding: 20px; background: linear-gradient(transparent 70%, rgba(0,0,0,0.6)); }
+        .interactive { pointer-events: auto; }
+        .exit-btn { position: absolute; top: 20px; left: 20px; background: rgba(0,0,0,0.4); border: none; color: white; padding: 8px 16px; border-radius: 20px; font-weight: 600; backdrop-filter: blur(5px); }
+        .side-bar { position: absolute; right: 15px; bottom: 100px; display: flex; flex-direction: column; gap: 20px; }
+        .btn-love { font-size: 50px; cursor: pointer; filter: drop-shadow(0 0 10px rgba(255,0,80,0.5)); }
 
-        /* Side Actions TikTok Style */
-        .side-bar { position: absolute; right: 15px; bottom: 100px; display: flex; flex-direction: column; gap: 20px; pointer-events: auto; }
-        .heart-btn { font-size: 45px; cursor: pointer; filter: drop-shadow(0 0 10px rgba(255,0,80,0.5)); transition: 0.2s; }
-        .heart-btn:active { transform: scale(0.8); }
+        /* Nav Bawah */
+        .nav { position: fixed; bottom: 0; width: 100%; height: 65px; background: white; border-top: 1px solid #eee; display: flex; justify-content: space-around; align-items: center; z-index: 1000; }
+        .nav-item { text-align: center; font-size: 11px; color: #888; }
+        .nav-item.active { color: var(--primary); font-weight: bold; }
+        .btn-add { background: var(--primary); color: white; width: 50px; height: 35px; border-radius: 10px; display: flex; align-items: center; justify-content: center; font-size: 24px; box-shadow: 0 4px 10px rgba(255,0,80,0.3); }
 
-        /* Navigation Bawah */
-        .nav-bar {
-            position: fixed; bottom: 0; width: 100%; height: 65px;
-            background: var(--card-bg); display: flex; justify-content: space-around;
-            align-items: center; border-top: 1px solid #eee; z-index: 1000;
-        }
-        .nav-link { text-align: center; font-size: 11px; color: var(--text-sub); font-weight: 500; }
-        .nav-link.active { color: var(--primary); }
-        .center-add { 
-            background: var(--primary); color: white; width: 45px; height: 35px; 
-            border-radius: 10px; display: flex; align-items: center; justify-content: center;
-            font-size: 24px; font-weight: bold; box-shadow: 0 4px 10px rgba(255,0,80,0.3);
-        }
-
-        /* Close Button */
-        .exit-btn { 
-            position: absolute; top: 20px; left: 20px; z-index: 100;
-            background: rgba(255,255,255,0.2); border: none; color: white;
-            padding: 8px 16px; border-radius: 20px; font-weight: 600; backdrop-filter: blur(5px);
-            pointer-events: auto;
-        }
-
-        /* Heart Animation */
-        .h-pop { position: absolute; bottom: 120px; right: 30px; font-size: 40px; pointer-events: none; animation: floatUp 0.8s ease-out forwards; }
-        @keyframes floatUp { 0% { opacity: 1; transform: translateY(0); } 100% { opacity: 0; transform: translateY(-300px) scale(2); } }
+        /* Animation */
+        .pop-heart { position: absolute; bottom: 120px; right: 30px; font-size: 40px; pointer-events: none; animation: flyUp 0.8s ease-out forwards; }
+        @keyframes flyUp { 0% { opacity:1; transform:translateY(0); } 100% { opacity:0; transform:translateY(-300px) scale(2); } }
     </style>
 </head>
 <body>
 
-    <div id="login-page" class="page active">
-        <div class="login-box">
-            <div class="logo" style="font-size: 40px; margin-bottom: 10px;">RStreaming</div>
-            <p style="color: #666; margin-bottom: 40px;">Temukan momen seru secara langsung.</p>
-            <button class="btn-google" onclick="login()">
-                <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" width="20">
-                Lanjutkan dengan Google
-            </button>
-        </div>
+    <div id="login-page" class="page active" style="justify-content:center; align-items:center; background:white;">
+        <div class="logo" style="font-size: 45px; margin-bottom: 30px;">RStreaming</div>
+        <button onclick="login()" style="background:#fff; border:1px solid #ddd; padding:12px 30px; border-radius:10px; font-weight:600; display:flex; align-items:center; gap:10px;">
+            <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" width="20"> Lanjutkan dengan Google
+        </button>
     </div>
 
     <div id="home-page" class="page">
-        <div class="header">
-            <div class="logo">RStreaming</div>
-            <div style="font-size: 20px;">🔔</div>
-        </div>
+        <div class="header"><div class="logo">RStreaming</div><div onclick="location.reload()">🔄</div></div>
         <div class="container">
-            <div class="section-title">Sedang Berlangsung</div>
-            <div class="grid" id="stream-grid">
-                </div>
+            <div style="font-weight:700; margin-bottom:15px;">Live Discovery</div>
+            <div class="grid" id="stream-list"></div>
         </div>
     </div>
 
     <div id="player-page" class="page">
-        <button class="exit-btn" onclick="stopStream()">← Kembali</button>
         <video id="v-remote" autoplay playsinline></video>
-        <video id="v-local" autoplay playsinline muted style="position:absolute; top:70px; right:20px; width:90px; height:130px; border-radius:12px; border:2px solid #fff; display:none; z-index:50; object-fit:cover;"></video>
+        <video id="v-local" autoplay playsinline muted style="position:absolute; top:80px; right:20px; width:100px; height:150px; border-radius:12px; border:2px solid white; display:none; object-fit:cover; z-index:50;"></video>
         
-        <div class="player-overlay">
-            <div class="side-bar">
-                <div class="heart-btn" onclick="doHeart()">❤️</div>
+        <button class="exit-btn interactive" onclick="stopStream()">← Kembali</button>
+        <div class="player-ui">
+            <div class="side-bar interactive">
+                <div class="btn-love" onclick="sendLove()">❤️</div>
             </div>
         </div>
     </div>
 
-    <div class="nav-bar" id="bottom-nav" style="display:none;">
-        <div class="nav-link active" onclick="showTab('home')">🏠<br>Home</div>
-        <div onclick="goLive()"><div class="center-add">+</div></div>
-        <div class="nav-link" onclick="location.reload()">👤<br>Profil</div>
+    <div class="nav" id="main-nav" style="display:none;">
+        <div class="nav-item active" onclick="showTab('home')">🏠<br>Beranda</div>
+        <div onclick="startLive()"><div class="btn-add">+</div></div>
+        <div class="nav-item" onclick="auth.signOut()">🚪<br>Keluar</div>
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
@@ -184,80 +107,85 @@
         firebase.initializeApp(firebaseConfig);
         const db = firebase.database();
         const auth = firebase.auth();
-        let peer = null;
-        let myMedia = null;
+        let peer = null, myStream = null;
 
         auth.onAuthStateChanged(user => {
             if(user) {
                 showTab('home');
-                document.getElementById('bottom-nav').style.display = 'flex';
+                document.getElementById('main-nav').style.display = 'flex';
                 initPeer(user.uid);
-                renderStreams();
+                listenLive();
+            } else {
+                showTab('login');
+                document.getElementById('main-nav').style.display = 'none';
             }
         });
 
         function login() { auth.signInWithPopup(new firebase.auth.GoogleAuthProvider()); }
 
         function initPeer(id) {
-            peer = new Peer(id);
+            // FIX: Server STUN Google agar tidak layar hitam
+            peer = new Peer(id, {
+                config: {'iceServers': [{ url: 'stun:stun.l.google.com:19302' }, { url: 'stun:stun1.l.google.com:19302' }]}
+            });
             peer.on('call', call => {
-                call.answer(null);
-                call.on('stream', rem => document.getElementById('v-remote').srcObject = rem);
+                call.answer(myStream);
+                call.on('stream', rem => {
+                    const rv = document.getElementById('v-remote');
+                    rv.srcObject = rem; rv.play();
+                });
             });
         }
 
-        function renderStreams() {
-            db.ref('active_list').on('value', snap => {
-                const grid = document.getElementById('stream-grid');
-                grid.innerHTML = "";
+        function listenLive() {
+            db.ref('active_rooms').on('value', snap => {
+                const list = document.getElementById('stream-list');
+                list.innerHTML = "";
                 snap.forEach(s => {
                     const d = s.val();
-                    grid.innerHTML += `
-                        <div class="card" onclick="joinStream('${s.key}')">
+                    list.innerHTML += `
+                        <div class="card" onclick="watchLive('${s.key}')">
                             <div class="card-thumb">
-                                <div class="live-badge">LIVE</div>
+                                <div class="live-label">LIVE</div>
                                 <img src="${d.photo}">
                             </div>
-                            <div class="card-body">
-                                <img src="${d.photo}" class="user-avatar">
-                                <div class="user-name">${d.name}</div>
-                            </div>
+                            <div class="card-footer">${d.name}</div>
                         </div>`;
                 });
             });
         }
 
-        async function goLive() {
+        async function startLive() {
             showTab('player');
-            const loc = document.getElementById('v-local');
-            loc.style.display = 'block';
-            myMedia = await navigator.mediaDevices.getUserMedia({video: true, audio: true});
-            loc.srcObject = myMedia;
-            db.ref('active_list/' + auth.currentUser.uid).set({ name: auth.currentUser.displayName, photo: auth.currentUser.photoURL });
-            peer.on('call', call => call.answer(myMedia));
+            const lv = document.getElementById('v-local');
+            lv.style.display = 'block';
+            myStream = await navigator.mediaDevices.getUserMedia({video: {facingMode: "user"}, audio: true});
+            lv.srcObject = myStream;
+            db.ref('active_rooms/' + auth.currentUser.uid).set({ name: auth.currentUser.displayName, photo: auth.currentUser.photoURL });
         }
 
-        function joinStream(id) {
+        function watchLive(id) {
             showTab('player');
             const call = peer.call(id, null);
-            call.on('stream', rem => document.getElementById('v-remote').srcObject = rem);
-            listenLove(id);
+            call.on('stream', rem => {
+                const rv = document.getElementById('v-remote');
+                rv.srcObject = rem; rv.play();
+            });
+            db.ref('taps/' + id).on('value', () => popHeart());
         }
 
-        function doHeart() { db.ref('h_taps/' + auth.currentUser.uid).set(Date.now()); }
-        function listenLove(id) {
-            db.ref('h_taps/' + id).on('value', () => {
-                const h = document.createElement('div');
-                h.className = 'h-pop'; h.innerHTML = '❤️';
-                h.style.right = (Math.random() * 40 + 20) + 'px';
-                document.getElementById('player-page').appendChild(h);
-                setTimeout(() => h.remove(), 800);
-            });
+        function sendLove() { db.ref('taps/' + auth.currentUser.uid).set(Date.now()); }
+        function popHeart() {
+            const h = document.createElement('div');
+            h.className = 'pop-heart'; h.innerHTML = '❤️';
+            h.style.right = (Math.random() * 50 + 20) + 'px';
+            document.getElementById('player-page').appendChild(h);
+            setTimeout(() => h.remove(), 800);
         }
 
         function stopStream() {
-            if(myMedia) myMedia.getTracks().forEach(t => t.stop());
-            db.ref('active_list/' + auth.currentUser.uid).remove();
+            if(myStream) myStream.getTracks().forEach(t => t.stop());
+            db.ref('active_rooms/' + auth.currentUser.uid).remove();
             location.reload();
         }
 
